--- a/frontend/css/global.css
+++ b/frontend/css/global.css
@@ -5,9 +5,13 @@
 
 body {
     background-color: #f5f5f5;
+    display: flex;
+    justify-content: space-between;
 }
 
-a {
-    text-decoration: none;
-    color: #000;
+h1 { 
+    font-size: 2rem;
+    font-weight: 700;
+    color: #E55B5B;
+    margin: 1rem;
 }
