--- a/frontend/css/lista-lembretes.css
+++ b/frontend/css/lista-lembretes.css
@@ -1,6 +1,7 @@
 .lista-de-lembretes {
     display: flex;
     flex-direction: column;
+    margin-left: 50vw;
     padding: 1rem;
     top: 100px;
 }
